RESOLVED FIXED173531
[WTF] Include execinfo.h and dlfcn.h based on platform defines
https://bugs.webkit.org/show_bug.cgi?id=173531
Summary [WTF] Include execinfo.h and dlfcn.h based on platform defines
Yusuke Suzuki
Reported 2017-06-18 18:44:49 PDT
[WTF] Include execinfo.h and dlfcn.h based on platform defines
Attachments
Patch (1.26 KB, patch)
2017-06-18 18:45 PDT, Yusuke Suzuki
achristensen: review+
Yusuke Suzuki
Comment 1 2017-06-18 18:45:52 PDT
Alex Christensen
Comment 2 2017-06-19 08:57:28 PDT
Comment on attachment 313252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313252&action=review > Source/WTF/wtf/StackTrace.cpp:33 > #if HAVE(BACKTRACE_SYMBOLS) || HAVE(DLADDR) Maybe it would be more clear if this didn't contain the other two.
Yusuke Suzuki
Comment 3 2017-06-19 19:52:24 PDT
Comment on attachment 313252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313252&action=review Thanks! >> Source/WTF/wtf/StackTrace.cpp:33 >> #if HAVE(BACKTRACE_SYMBOLS) || HAVE(DLADDR) > > Maybe it would be more clear if this didn't contain the other two. Fixed.
Yusuke Suzuki
Comment 4 2017-06-19 19:59:36 PDT
Note You need to log in before you can comment on or make changes to this bug.