[WTF] Include execinfo.h and dlfcn.h based on platform defines https://bugs.webkit.org/show_bug.cgi?id=173531

Reviewed by Alex Christensen.

execinfo.h and dlfcn.h can be missing in some libc libraries.
When including it, we should honor platform defines like HAVE(DLADDR).

* wtf/StackTrace.cpp:

Canonical link: https://commits.webkit.org/190468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218526 268f45cc-cd09-0410-ab3c-d52691b4dbfc